--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^7.3.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7",
     "router": "^1.3.8"
   }
